--- a/covid-map/package.json
+++ b/covid-map/package.json
@@ -31,6 +31,7 @@
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-sharp": "^2.3.6",
     "ibm-design-colors": "^2.0.4",
+    "install-peerdeps": "^2.0.1",
     "leaflet": "^1.6.0",
     "lodash": "^4.17.15",
     "material-ui-colors": "^1.0.0",
